--- a/master.css
+++ b/master.css
@@ -1,11 +1,140 @@
-.title{
-  margin:auto;
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+ font-family: 'Roboto', sans-serif;
+}
+h1{
+  margin:0;
+}
+a{
+  text-decoration: none;
+  color: inherit;
+}
+.wrapper{
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-auto-rows: 100vh;
+}
+#banner{
+  background-image: url(images/banner.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  display: grid;
+  grid-template-columns: repeat(5,1fr);
+  grid-template-rows: repeat(6, 1fr);
+  grid-auto-rows: minmax(auto,20px);
+}
+#title1{
+  color:white;
+  font-size: 2em;
+  grid-column: 2/5;
+  grid-row: 3;
   text-align: center;
+
+}
+#type{
+  color:white;
+  font-size: 2em;
+  grid-column: 2/5;
+  grid-row: 3;
+  text-align: center;
+  align-self: end;
+}
+#more{
+  color:white;
+  grid-column: 2/5;
+  grid-row: 6;
+  text-align: center;
+  align-self: end;
 }
 
-.sad{
-  text-align: center;
-  margin-top:15em;
+#more p{
+  margin: 0;
 }
 
-.sad h1{font-size: 70px;}
+#more img{
+  width: 3%;
+}
+
+
+#skills{
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-auto-rows: minmax(100px, auto);
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+}
+#skills-title{
+  grid-column: 1/6;
+  text-align: center;
+}
+.skill-wrapper{
+  grid-column: 2/5;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  text-align: center;
+  grid-gap:1em;
+}
+.skill{
+  color:#ECB939;
+}
+.skill-wrapper p {
+  color:#c6c6c6;
+}
+
+#projects{
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-auto-rows: minmax(100px, auto);
+  background-color: #f9f9f9;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+}
+#project-title{
+  grid-column: 1/6;
+}
+.project{
+  color:#ECB939;
+}
+.project p{
+  color:#c6c6c6;
+}
+#project-wrapper{
+  grid-column: 2/5;
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+}
+
+#footer{
+  display: grid;
+  grid-template-columns: repeat(5,1fr);
+  grid-auto-flow: minmax(100px,auto);
+  align-items: center;
+  text-align: center;
+  background-color: #363636;
+}
+#footer h2{
+  grid-column: 3/4;
+  color:white;
+}
+button{
+  grid-column: 3/4;
+  width:50;
+  color:#ECB939;
+  background-color: #363636;
+  border: 3px solid #ECB939;
+  border-radius: 10px;
+  padding:20px;
+  font-size: 20px;
+  transition: color 1s, background-color 1s;
+  margin-bottom: 30px;
+}
+button:hover{
+  color:#363636;
+  background-color:#ECB939;
+}
