--- a/projects/gigaweb-solutions/master.css
+++ b/projects/gigaweb-solutions/master.css
@@ -55,7 +55,7 @@ p {
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  min-height: 450px;
+  height: inherit;
   z-index:-1;
   opacity: 0.4;
 }
