--- a/new/css/master.css
+++ b/new/css/master.css
@@ -10,8 +10,7 @@ body{
 }
 
 #showcase {
-  min-height: 100vh;
-  color: #333;
+  min-height: 100vh;``
   text-align: center;
 }
 
@@ -27,16 +26,16 @@ body{
   opacity: 0.5;
 }
 
-#showcase h1 {
-  padding-top: 50px ;
-  padding-bottom: 0;
-  color:#fff;
-  font-size: 2em;
-}
-
 #showcase #logo{
   width:100px;
   padding-top: 50px;
+}
+
+#showcase h1 {
+  padding-top: 4em;
+  padding-bottom: 0;
+  color:#fff;
+  font-size: 3em;
 }
 
 #showcase button{
@@ -47,7 +46,7 @@ body{
   border-radius: 15px;
   color:white;
   font-size: 1em;
-  margin-top: 20px;
+  margin-top: 3em;
   cursor: pointer;
   transition: all .2s ease-in;
 }
@@ -57,5 +56,6 @@ body{
 }
 
 #showcase p{
-
+  margin-top:20em;
+  color:white;
 }
