--- a/new/css/master.css
+++ b/new/css/master.css
@@ -1,61 +1,51 @@
 *{
   margin:0;
   padding:0;
-  font-family: Arial, Helvetica, sans-serif;
   text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-body{
-  background: #333;
-}
-
-#showcase {
-  min-height: 100vh;``
-  text-align: center;
-}
-
-#showcase .bg-image{
-  position: absolute;
-  background: #333 url(../images/mobile-background.jpg);
+#showcase{
+  height: 100vh;
+  background-image: url(../images/mobile-background.jpg);
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
-  width: 100%;
-  height: 100vh;
-  z-index:-1;
-  opacity: 0.5;
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr;
+  grid-template-rows: repeat(12,1fr);
 }
+
 
 #showcase #logo{
-  width:100px;
-  padding-top: 50px;
+  grid-column: 2;
+  width: 30%;
+  margin: 3em auto;
 }
 
-#showcase h1 {
-  padding-top: 4em;
-  padding-bottom: 0;
-  color:#fff;
+#showcase-title{
+  grid-column: 2;
+  grid-row: 5;
+  color:white;
   font-size: 3em;
 }
 
 #showcase button{
-  background: transparent;
-  text-decoration: none;
-  border: 3px solid #2C2E3C;
-  padding: 20px 30px;
+  grid-column: 2;
+  grid-row: 7;
+  width:70%;
+  height:70%;
+  margin: 0 auto;
+  background: #2C2E3C;
+  border: #2C2E3C 2px solid;
   border-radius: 15px;
   color:white;
-  font-size: 1em;
-  margin-top: 3em;
-  cursor: pointer;
-  transition: all .2s ease-in;
+  font-size: 2em;
 }
 
-#showcase button:hover{
-  background: #2C2E3C;
-}
 
-#showcase p{
-  margin-top:20em;
+#showcase-more{
+  grid-column: 2;
+  grid-row: 12;
   color:white;
+  font-size: 3em;
 }
