--- a/css/master.css
+++ b/css/master.css
@@ -1,8 +1,13 @@
+*{
+  margin:0;
+  padding:0;
+}
 html, body {
   height: 100%;
   margin: 0;
   padding: 0;
- font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif;
+  text-align: center;
 }
 h1{
   margin:0;
@@ -24,13 +29,13 @@ a{
   background-size: cover;
 
   display: grid;
-  grid-template-columns: repeat(5,1fr);
+  grid-template-columns: 1fr 3fr 1fr;
   grid-template-rows: repeat(12, 1fr);
 }
 #title1{
   color:white;
   font-size: 2em;
-  grid-column: 2/5;
+  grid-column: 2/3;
   grid-row: 5;
   text-align: center;
   grid-auto-rows: auto;
@@ -38,13 +43,13 @@ a{
 #type{
   color:white;
   font-size: 2em;
-  grid-column: 2/5;
+  grid-column: 2/3;
   grid-row: 6;
   text-align: center;
 }
 #more{
   color:white;
-  grid-column: 2/5;
+  grid-column: 2/3;
   grid-row: 12;
   text-align: center;
   align-self: end;
@@ -57,31 +62,28 @@ a{
   width: 3%;
 }
 
-
-#skills{
+#section-b{
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  grid-auto-rows: minmax(100px, auto);
-  justify-content: center;
-  align-items: center;
-  background-color: white;
+  grid-template-columns: 1fr 3fr 1fr;
+  padding-top:2em;
 }
-#skills-title{
-  grid-column: 1/6;
-  text-align: center;
+#section-b h2{
+  grid-column: 2/3;
 }
-.skill-wrapper{
-  grid-column: 2/5;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  text-align: center;
-  grid-gap:1em;
+#section-b ul{
+  grid-column: 2/3;
+  display: flex;
+  justify-content: space-around;
 }
-.skill{
-  color:#ECB939;
+#section-b li{
+  width:31%;
+  list-style-type: none;
 }
-.skill-wrapper p {
-  color:#c6c6c6;
+#section-b .card-content{
+  margin-top:2em;
+}
+#section-b .card-content p{
+  margin:1em 0 3em 0;
 }
 
 #projects{
@@ -114,6 +116,9 @@ a{
   padding: 2px;
   width:25%;
   transition: all 0.4s ease-in-out;
+}
+.project:hover{
+  opacity: 0.4;
 }
 .holder{
   height:auto;
@@ -154,4 +159,21 @@ a{
   padding: 0;
   transition: all 0.4s ease-in-out;
   background-color: #ECB939;
+}
+
+
+@media (max-width: 750px) {
+  #section-b h2{
+    margin-bottom:1.5em;
+  }
+
+  #section-b ul{
+    display:inline-block;
+    margin:0 auto;
+    width: 325%;
+  }
+
+  #section-b li {
+  }
+
 }
