--- a/css/master.css
+++ b/css/master.css
@@ -1,179 +1,213 @@
 *{
   margin:0;
   padding:0;
-}
-html, body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  font-family: 'Roboto', sans-serif;
   text-align: center;
-}
-h1{
-  margin:0;
-}
-a{
-  text-decoration: none;
-  color: inherit;
+  font-family: 'Montserrat', sans-serif;
 }
 
-.wrapper{
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-auto-rows: 100vh;
-}
-#banner{
-  background-image: url(/images/banner.jpg);
+#showcase{
+  height: 100vh;
+  background-image: url(../images/banner.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-
   display: grid;
-  grid-template-columns: 1fr 3fr 1fr;
-  grid-template-rows: repeat(12, 1fr);
+  grid-template-columns:1fr 4fr 1fr;
+  grid-template-rows: repeat(5, 1fr);
 }
-#title1{
-  color:white;
+
+#showcase-content{
+  color:#fff;
+}
+
+#showcase-content{
+  grid-column: 2;
+  grid-row: 3;
+}
+
+#showcase-content #showcase-title{
+  font-size: 5em;
+}
+
+#showcase button{
+  width:60%;
+  height:20%;
   font-size: 2em;
-  grid-column: 2/3;
+  background:#ecb939;
+  color:#333;
+  border: #ecb939 2px solid;
+  border-radius: 30px;
+  transition: all 0.3s ease-in-out;
+  cursor:pointer;
+  margin-top:1em;
+}
+
+#showcase button:hover{
+
+  width:75%;
+}
+
+#project-link{
+  color:white;
+  grid-column:2;
   grid-row: 5;
-  text-align: center;
-  grid-auto-rows: auto;
-}
-#type{
-  color:white;
-  font-size: 2em;
-  grid-column: 2/3;
-  grid-row: 6;
-  text-align: center;
-}
-#more{
-  color:white;
-  grid-column: 2/3;
-  grid-row: 12;
-  text-align: center;
   align-self: end;
-  cursor: pointer;
+  margin-bottom:1em;
+  font-size: 2em;
 }
-#more p{
-  margin: 0;
+
+/* Section A */
+
+#section-a{
+  background: #fff;
+  box-shadow: 0px 0px 30px 2px #000000;
 }
-#more img{
-  width: 3%;
+
+#section-a h1{
+  color:black;
+  font-size:3em;
+  padding-top:2em;
+  padding-bottom:1em;
+}
+
+.card-img{
+  width:30%;
+  margin-bottom:2em;
+}
+
+#section-a ul{
+}
+
+#section-a li{
+  width:85%;
+  background: #fff;
+  list-style-type: none;
+  margin:1em auto;
+  padding:2em 1em;
+}
+
+#section-a h2{
+  margin-bottom:1em;
 }
 
 #section-b{
-  display: grid;
-  grid-template-columns: 1fr 3fr 1fr;
+  background: #ECECEC;
+  padding-bottom: 3em;
+}
+
+#section-b h1{
+  font-size: 3em;
+  padding-top:2em;
+  padding-bottom:1em;
+}
+
+#section-b img{
+  margin-top:2em;
+  width:80%;
+}
+
+#section-b p{
+  font-size: 2.5em;
+  width:80%;
+  margin:auto;
+  padding:0 1em 0 1em;
+}
+
+.project-card{
+  margin-bottom:2em;
+}
+
+footer {
+  background: #333;
+  height: 100px;
+  color:white;
+  font-size: 2.5em;
   padding-top:2em;
 }
-#section-b h2{
-  grid-column: 2/3;
-}
-#section-b ul{
-  grid-column: 2/3;
-  display: flex;
-  justify-content: space-around;
-}
-#section-b li{
-  width:31%;
-  list-style-type: none;
-}
-#section-b .card-content{
-  margin-top:2em;
-}
-#section-b .card-content p{
-  margin:1em 0 3em 0;
-}
 
-#projects{
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  background-color: #f9f9f9;
-  text-align: center;
-}
-#project-title{
-  grid-column: 1/6;
-}
-.project_categories{
-  grid-column: 2/5;
-}
-.category_item{
-  float: left;
-  width: 25%;
-  padding:20px 0;
-  text-align: center;
-  cursor: pointer;
-  font-size: 15px;
-  transition: background-color 0.5s;
-}
-.category_item:hover{
-  background-color: #ECB939;
-}
-.project{
-  box-sizing: border-box;
-  float: left;
-  padding: 2px;
-  width:25%;
-  transition: all 0.4s ease-in-out;
-}
-.project:hover{
-  opacity: 0.4;
-}
-.holder{
-  height:auto;
-}
-
-#footer{
-  display: grid;
-  grid-template-columns: repeat(5,1fr);
-  grid-auto-flow: minmax(100px,auto);
-  align-items: center;
-  text-align: center;
-  background-color: #363636;
-}
-#footer h2{
-  grid-column: 3/4;
-  color:white;
-}
-#footer button{
-  grid-column: 3/4;
-  width:50;
-  color:#ECB939;
-  background-color: #363636;
-  border: 3px solid #ECB939;
-  border-radius: 10px;
-  padding:20px;
-  font-size: 20px;
-  transition: color 0.5s, background-color 0.5s;
-  margin-bottom: 30px;
-}
-#footer button:hover{
-  color:#363636;
-  background-color:#ECB939;
-}
-
-.hide{
-  transform: scale(0);
-  width: 0;
-  padding: 0;
-  transition: all 0.4s ease-in-out;
-  background-color: #ECB939;
-}
-
-
-@media (max-width: 750px) {
-  #section-b h2{
-    margin-bottom:1.5em;
+@media(min-width: 750px) {
+  #showcase button{
+    width:40%;
+    height:2em;
   }
 
-  #section-b ul{
-    display:inline-block;
-    margin:0 auto;
-    width: 325%;
+  #showcase button:hover{
+    width: 45%;
   }
 
-  #section-b li {
+  #section-a{
+    display:grid;
+    grid-template-columns: repeat(5, 1fr);
+
+  }
+
+  #section-a h1{
+    grid-column: 1/6;
+  }
+
+  #section-a p{
+    grid-column: 1/6;
+  }
+
+  #section-a ul{
+    grid-column: 2/5;
+
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+  }
+
+  #section-a .card-1{
+    grid-column:1/2;
+  }
+
+  #section-a .card-2{
+    grid-column:2/3;
+  }
+
+  #section-a .card-3{
+    grid-column:3/4;
+  }
+
+  #section-b{
+    display:grid;
+    grid-template-columns: repeat(5,1fr)
+  }
+
+  #section-b h1{
+    grid-column:2/5;
+  }
+
+#section-b p{
+  font-size: 1em;
+  grid-column:2/5;
+}
+
+  #section-b #project-wrapper{
+    grid-column:2/5;
+  }
+
+  #section-b .project-card{
+    width:25%;
+    float:left;
+  }
+
+  .project-card p{
+    display: none;;
+  }
+
+  footer{
+    padding-bottom:1em;
+  }
+
+  footer button{
+    width: 18em;
+    height: 3em;
+    background:#ecb939;
+    color:#333;
+    border: #ecb939 2px solid;
+    border-radius: 30px;
+    transition: all 0.3s ease-in-out;
+    cursor:pointer;
   }
 
 }
