--- a/new/css/master.css
+++ b/new/css/master.css
@@ -11,7 +11,6 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-color: #333;
   display: grid;
   grid-template-columns:1fr 4fr 1fr;
   grid-template-rows: repeat(5, 1fr);
@@ -61,6 +60,7 @@
 
 #section-a{
   background: #fff;
+  box-shadow: 0px 0px 30px 2px #000000;
 }
 
 #section-a h1{
@@ -92,6 +92,7 @@
 
 #section-b{
   background: #ECECEC;
+  padding-bottom: 3em;
 }
 
 #section-b h1{
@@ -106,8 +107,107 @@
 }
 
 #section-b p{
+  font-size: 2.5em;
   width:80%;
   margin:auto;
   padding:0 1em 0 1em;
-  margin-bottom: 3em;
+}
+
+.project-card{
+  margin-bottom:2em;
+}
+
+footer {
+  background: #333;
+  height: 100px;
+  color:white;
+  font-size: 2.5em;
+  padding-top:2em;
+}
+
+@media(min-width: 750px) {
+  #showcase button{
+    width:40%;
+    height:2em;
+  }
+
+  #showcase button:hover{
+    width: 45%;
+  }
+
+  #section-a{
+    display:grid;
+    grid-template-columns: repeat(5, 1fr);
+
+  }
+
+  #section-a h1{
+    grid-column: 1/6;
+  }
+
+  #section-a p{
+    grid-column: 1/6;
+  }
+
+  #section-a ul{
+    grid-column: 2/5;
+
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+  }
+
+  #section-a .card-1{
+    grid-column:1/2;
+  }
+
+  #section-a .card-2{
+    grid-column:2/3;
+  }
+
+  #section-a .card-3{
+    grid-column:3/4;
+  }
+
+  #section-b{
+    display:grid;
+    grid-template-columns: repeat(5,1fr)
+  }
+
+  #section-b h1{
+    grid-column:2/5;
+  }
+
+#section-b p{
+  font-size: 1em;
+  grid-column:2/5;
+}
+
+  #section-b #project-wrapper{
+    grid-column:2/5;
+  }
+
+  #section-b .project-card{
+    width:25%;
+    float:left;
+  }
+
+  .project-card p{
+    display: none;;
+  }
+
+  footer{
+    padding-bottom:1em;
+  }
+
+  footer button{
+    width: 18em;
+    height: 3em;
+    background:#ecb939;
+    color:#333;
+    border: #ecb939 2px solid;
+    border-radius: 30px;
+    transition: all 0.3s ease-in-out;
+    cursor:pointer;
+  }
+
 }
