--- a/css/master.css
+++ b/css/master.css
@@ -26,11 +26,11 @@
 }
 
 #showcase-content #showcase-title{
-  font-size: 4em;
+  font-size: 3em;
 }
 
 #showcase button{
-  width:80%;
+  width:100%;
   height:20%;
   font-size: 2em;
   background:#ecb939;
@@ -40,6 +40,7 @@
   transition: all 0.3s ease-in-out;
   cursor:pointer;
   margin-top:1em;
+  padding:15px;
 }
 
 #project-link{
@@ -48,7 +49,8 @@
   grid-row: 5;
   align-self: end;
   margin-bottom:1em;
-  font-size: 2em;
+  font-size: 1.5em;
+  cursor: pointer;
 }
 
 /* Section A */
@@ -83,6 +85,7 @@
 
 #section-a h2{
   margin-bottom:1em;
+  height: 2em;
 }
 
 #section-b{
@@ -114,10 +117,21 @@
 
 footer {
   background: #333;
-  height: 100px;
   color:white;
   font-size: 2.5em;
-  padding-top:2em;
+  padding-top:1em;
+  padding-bottom:1em;
+}
+
+footer button{
+  width: 18em;
+  height: 3em;
+  background:#ecb939;
+  color:#333;
+  border: #ecb939 2px solid;
+  border-radius: 30px;
+  transition: all 0.3s ease-in-out;
+  cursor:pointer;
 }
 
 @media(min-width: 750px) {
@@ -136,6 +150,7 @@ footer {
     transition: all 0.3s ease-in-out;
     cursor:pointer;
     margin-top:1em;
+    padding: 20px;
   }
 
   #showcase button:hover{
